<resources>
    <string name="app_name">Fatorti</string>
    <string name="contactMsgHint">Message ...</string>
    <string name="contactSendBtn">send</string>
    <string name="contactSubjectHint">Enter mail subject</string>
    <string name="contactSubjectTxt">Subject</string>
    <string name="not_registered_yet">Not registered yet?</string>
    <string name="register">Register</string>
    <string name="password">password</string>
    <string name="user_name">User Name</string>
    <string name="login">Login</string>
    <string name="splashImgDescription">app logo</string>
    <string name="errorVisa">Error: Invalid visa!</string>
    <string name="alreadyPaidBill">Already paid!!!</string>
</resources>