<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20pt"
    tools:context=".ContactUsActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:padding="50pt"
        app:cardBackgroundColor="@color/material_dynamic_secondary90"
        app:cardCornerRadius="15dp"

        >

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:text="@string/contactSubjectTxt"
                    android:textSize="9.5pt" />

                <Spinner
                    android:id="@+id/spnSubject"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:entries="@array/mailSubjects"
                    android:minHeight="48dp"
                    android:padding="10dp" />


            </androidx.appcompat.widget.LinearLayoutCompat>

            <EditText
                android:id="@+id/edtOtherSubject"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:hint="@string/contactSubjectHint"
                android:padding="30dp"
                android:textColorHint="#616161"
                android:visibility="invisible" />


            <EditText
                android:id="@+id/edtMsg"
                android:layout_width="match_parent"
                android:layout_height="90pt"

                android:layout_margin="20dp"
                android:hint="@string/contactMsgHint"
                android:padding="30dp"
                android:textColorHint="#616161" />

            <Button
                android:id="@+id/btnSendFeedback"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="10pt"
                android:padding="20dp"
                android:text="@string/contactSendBtn" />
        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.cardview.widget.CardView>


</androidx.appcompat.widget.LinearLayoutCompat>