<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <EditText
        android:id="@+id/editTextFirstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:hint="First Name"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/editTextLastName"
        app:layout_constraintStart_toStartOf="@+id/editTextLastName" />

    <EditText
        android:id="@+id/editTextLastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginBottom="15dp"
        android:ems="10"
        android:hint="Last name"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/editTextEmail"
        app:layout_constraintStart_toStartOf="@+id/editTextEmail" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="82dp"
        android:layout_marginTop="182dp"
        android:ems="10"
        android:hint="Email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextUNameRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:ems="10"
        android:hint="@string/user_name"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="@+id/editTextEmail"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmail" />

    <EditText
        android:id="@+id/editTextPasswordRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="@+id/editTextUNameRegister"
        app:layout_constraintTop_toBottomOf="@+id/editTextUNameRegister" />

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="40dp"
        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="@+id/editTextPasswordRegister"
        app:layout_constraintTop_toBottomOf="@+id/editTextPasswordRegister" />

    <TextView
        android:id="@+id/resultTextRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="18dp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@+id/editTextPasswordRegister"
        app:layout_constraintTop_toBottomOf="@+id/editTextPasswordRegister" />

    <Button
        android:id="@+id/goToLoginPageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="228dp"
        android:text="@string/login"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="@+id/buttonRegister"
        app:layout_constraintTop_toBottomOf="@+id/editTextPasswordRegister" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="14dp"
        android:text="Or go back to"
        app:layout_constraintBottom_toBottomOf="@+id/goToLoginPageButton"
        app:layout_constraintEnd_toStartOf="@+id/goToLoginPageButton" />
</androidx.constraintlayout.widget.ConstraintLayout>